//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  deleted Boolean [not null, default: false]
  firstName String [not null]
  lastName String [not null]
  middleName String
  email String [unique, not null]
  status String [not null, default: 'PENDING']
  avatarUrl String
  gender String
  phoneNumber String
  address String
  googleId String [unique]
  roles user_to_role [not null]
  permissions user_to_permission [not null]
  passwords passwords [not null]
  roleCreated roles [not null]
  roleUpdated roles [not null]
  featureCreated features [not null]
  featureUpdated features [not null]
  permissionCreated permissions [not null]
  permissionUpdated permissions [not null]
  requestCreator requests [not null]
  requestApprover requests [not null]
}

Table passwords {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  deleted Boolean [not null, default: false]
  password String [not null]
  userId String [not null]
  type String [not null, default: 'PASSWORD']
  user users [not null]
}

Table roles {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  createdById String
  updatedById String
  deleted Boolean [not null, default: false]
  code String [unique, not null]
  name String [not null]
  description String
  isReadOnly Boolean [not null, default: false]
  users user_to_role [not null]
  permissions role_to_permission [not null]
  createdBy users
  updatedBy users
}

Table user_to_role {
  userId String [not null]
  roleId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  user users [not null]
  role roles [not null]

  indexes {
    (userId, roleId) [pk]
  }
}

Table features {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  createdById String
  updatedById String
  deleted Boolean [not null, default: false]
  code String [not null]
  name String [not null]
  description String
  type String [not null, default: 'FEATURE']
  parentId String
  sortOrder Int [not null, default: 0]
  parent features
  childs features [not null]
  permissions permissions [not null]
  createdBy users
  updatedBy users
}

Table permissions {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  createdById String
  updatedById String
  deleted Boolean [not null, default: false]
  code String [not null]
  name String [not null]
  description String
  type String [not null, default: 'FEATURE']
  featureId String [not null]
  feature features [not null]
  users user_to_permission [not null]
  roles role_to_permission [not null]
  createdBy users
  updatedBy users
}

Table user_to_permission {
  userId String [not null]
  permissionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  user users [not null]
  permission permissions [not null]

  indexes {
    (userId, permissionId) [pk]
  }
}

Table role_to_permission {
  roleId String [not null]
  permissionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  role roles [not null]
  permission permissions [not null]

  indexes {
    (roleId, permissionId) [pk]
  }
}

Table requests {
  id String [pk]
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  requestType String [not null]
  jsonParameters String [not null]
  status String [not null, default: 'PENDING']
  approvedBy String
  approvedAt DateTime
  requester users [not null]
  approver users
}

Table createdBy {
  rolecreatedId String [ref: > roles.id]
  featurecreatedId String [ref: > features.id]
}

Table updatedBy {
  roleupdatedId String [ref: > roles.id]
  featureupdatedId String [ref: > features.id]
}

Ref: passwords.userId > users.id

Ref: roles.createdById > users.id

Ref: roles.updatedById > users.id

Ref: user_to_role.userId > users.id

Ref: user_to_role.roleId > roles.id

Ref: features.parentId - features.id

Ref: features.createdById > users.id

Ref: features.updatedById > users.id

Ref: permissions.featureId > features.id

Ref: permissions.createdById > users.id

Ref: permissions.updatedById > users.id

Ref: user_to_permission.userId > users.id

Ref: user_to_permission.permissionId > permissions.id

Ref: role_to_permission.roleId > roles.id

Ref: role_to_permission.permissionId > permissions.id

Ref: requests.createdById > users.id

Ref: requests.approvedBy > users.id